fix: stabilize tab bar on mobile scroll

--- a/frontend/src/app/menu/menu.page.scss
+++ b/frontend/src/app/menu/menu.page.scss
@@ -1,5 +1,6 @@
 ion-content {
   --background: #121212;
+  --padding-bottom: 110px;
 }
 
 :host {
@@ -432,6 +433,6 @@ ion-content {
 }
 
 .spacer { 
-  height: 80px; 
+  height: 120px; 
 }
 
